scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -471,6 +471,7 @@ header .header-content {
 }
 
 .pop-up {
+  z-index: 999;
   position: fixed;
   top: 0;
   bottom: 0;
